--- a/site/config.toml
+++ b/site/config.toml
@@ -2,4 +2,5 @@ baseurl = "/"
 languageCode = "en-us"
 title = "Homepage"
 disableHugoGeneratorInject = true
-live_base_url = "https://www.thefoodmongeratx.com"
+enableRobotsTXT = true
+canonifyURLs = true
